--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,20 +56,13 @@
 
                 {{ content }}
 
-                <div class="footer">
-                    <div class="contact">
-                        <p>
-                            ReactiveX<br />
-                            Reactive Extensions<br />
-                            info@reactivex.com
-                        </p>
-                    </div>
-                    <div class="contact">
-                        <p>
-                            <a href="https://github.com/ReactiveX">github.com/ReactiveX</a><br />
-                            <a href="https://twitter.com/ReactiveX">twitter.com/ReactiveX</a><br />
-                        </p>
-                    </div>
+                <hr/>
+                <div style="text-align:center">
+                    <span><a href="{{ site.url }}"><img src="{{ site.url }}/assets/Rx_Icon.png"/> ReactiveX</a></span> 
+                    <strong style="padding-left:10px; padding-right:10px;">&middot;</strong>
+                    <span><a href="https://github.com/ReactiveX"><img src="{{ site.url }}/assets/GitHub_Icon.png"/> github.com/ReactiveX</a></span> 
+                    <strong style="padding-left:10px; padding-right:10px;">&middot;</strong> 
+                    <span><a href="https://twitter.com/ReactiveX"><img src="{{ site.url }}/assets/Twitter.png"/> twitter.com/ReactiveX</a></span>
                 </div>
             </div>
         </div><!-- /.container -->
