added stubs for top level pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,14 +38,14 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Intro</a></li>
-                        <li><a href="#">Documentation</a></li>
-                        <li><a href="#">Languages</a></li>
-                        <li><a href="#">Related Projects</a></li>
-                        <li><a href="#">Media</a></li>
-                        <li><a href="#">Community</a></li>
-                        <li><a href="#">GitHub</a></li>
-                        <li><a href="#">Releases and Binaries</a></li>
+                        <li class="active"><a href="/">Intro</a></li>
+                        <li><a href="{{ site.url }}/documentation.html">Documentation</a></li>
+                        <li><a href="{{ site.url }}/languages.html">Languages</a></li>
+                        <li><a href="{{ site.url }}/projects.html">Related Projects</a></li>
+                        <li><a href="{{ site.url }}/media.html">Media</a></li>
+                        <li><a href="{{ site.url }}/community.html">Community</a></li>
+                        <li><a href="{{ site.url }}/github.html">GitHub</a></li>
+                        <li><a href="{{ site.url }}/releases.html">Releases and Binaries</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
