copied RxJava wiki into documentation for testing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><img src="{{ site.url }}/assets/Rx_Logo_S.png" style="height:90%;"/> {{ site.name }}</a>
+                    <a class="navbar-brand" href="/"><img src="{{ site.url }}/assets/Rx_Logo_S.png" style="height:90%;"/> {{ site.name }}</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
