--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -41,9 +41,9 @@ layout: default
 		    <li><a href="{{ site.url }}/observables/implement-operator.html">Implementing your own Operators</a></li>
 		  </ul>
 		</li>
-		<li><a href="#">Subject</a></li>
-		<li><a href="#">Scheduler</a></li>
-		<li><a href="#">Plugins</a></li>
+		<li><a href="{{ site.url }}/subject.html">Subject</a></li>
+		<li><a href="{{ site.url }}/scheduler.html">Scheduler</a></li>
+		<li><a href="{{ site.url }}/plugins.html">Plugins</a></li>
 		<li>
 			<a href="#">Language Adapters</a>
 			<ul>
