documentation update + dynamic code loading using github API

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
         <link href="/css/bootstrap-theme.css" rel="stylesheet">
         <link href="/css/theme.css" rel="stylesheet">
 
+        <!-- Prism -->
+        <link href="/css/prism.css" rel="stylesheet">
+
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -51,6 +54,14 @@
             </div>
         </div>
 
+        <!-- Bootstrap core JavaScript - Placed at the end of the document so the pages load faster -->
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="/js/bootstrap.min.js"></script>
+        <!-- Prism -->
+        <script src="/js/prism.js"></script>
+
         <div class="container">
             <div>
 
@@ -67,11 +78,6 @@
             </div>
         </div><!-- /.container -->
 
-        <!-- Bootstrap core JavaScript - Placed at the end of the document so the pages load faster -->
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="/js/bootstrap.min.js"></script>
         <!-- Activate current page menu button -->
         <script>$("#menu-{{ page.id }}").addClass("active");</script>
 
