safe code embedding using SafeHTML (google closure)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,6 +61,11 @@
         <script src="/js/bootstrap.min.js"></script>
         <!-- Prism -->
         <script src="/js/prism.js"></script>
+        <!-- Google Closure -->
+        <script src="js/goog/base.js"></script>
+        <script>
+            goog.require('goog.html.SafeHtml');
+        </script>
 
         <div class="container">
             <div>
