--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -54,7 +54,7 @@ layout: default
 			    <li><a href="#">Kotlin</a></li>
 		  	</ul>
 		</li>
-		<li><a href="#">How to Contribute</a></li>
+		<li><a href="{{ site.url }}/contribute.html">How to Contribute</a></li>
 		<li><a href="#">Javadoc</a></li>
 	</ul>
   </div>
