liquid markdown tag for dynamic code embedding

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,6 +63,9 @@
         <script src="/js/prism.js"></script>
         <!-- Google Closure -->
         <script src="js/goog/base.js"></script>
+        <!-- Code exmaple embedding -->
+        <script src="js/embed.js"></script>
+        
         <script>
             goog.require('goog.html.SafeHtml');
         </script>
