--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -55,7 +55,7 @@ layout: default
 		  	</ul>
 		</li>
 		<li><a href="{{ site.url }}/contribute.html">How to Contribute</a></li>
-		<li><a href="#">Javadoc</a></li>
+		<li><a href="http://netflix.github.io/RxJava/javadoc/rx/Observable.html" target="_BLANK">Javadoc</a></li>
 	</ul>
   </div>
   
