safe code embedding + hello world w/ polymer tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,8 @@
 
         <!-- Custom CSS -->
         <!--link rel="stylesheet" href="/css/main.css"-->
+
+        <link rel="import" href="polymer/components/paper-tabs/paper-tabs.html">
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
