--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{ page.title }}</title>
 
+        <!-- Polymer -->
+        <script src="/polymer/components/platform/platform.js"></script>
+
         <!-- Bootstrap -->
         <link href="/css/bootstrap.min.css" rel="stylesheet">
         <link href="/css/bootstrap-theme.css" rel="stylesheet">
@@ -58,15 +61,13 @@
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <!-- Polymer -->
-        <script src="polymer/components/platform/platform.js"></script>
-        <link rel="import" href="polymer/elements/code-snippet.html">        
+        <link rel="import" href="/polymer/elements/code-snippet.html">
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="/js/bootstrap.min.js"></script>
         <!-- Prism -->
         <script src="/js/prism.js"></script>
         <!-- Google Closure -->
-        <script src="js/goog/base.js"></script>
+        <script src="/js/goog/base.js"></script>
         
         <script>
             goog.require('goog.html.SafeHtml');
