--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,55 @@
         <!-- Custom CSS -->
         <!--link rel="stylesheet" href="/css/main.css"-->
 
-        <link rel="import" href="polymer/components/paper-tabs/paper-tabs.html">
+        <style shim-shadowdom>
+  
+            body {
+              font-family: RobotoDraft, 'Helvetica Neue', Helvetica, Arial;
+              color: #333;
+              -webkit-user-select: none;
+              -moz-user-select: none;
+              -ms-user-select: none;
+              user-select: none;
+              -webkit-tap-highlight-color: rgba(0,0,0,0);
+              -webkit-touch-callout: none;
+            }
+            
+            paper-tabs, core-toolbar {
+              background-color: #00bcd4;
+              color: #fff;
+              box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.2);
+            }
+            
+            core-toolbar paper-tabs {
+              box-shadow: none;
+            }
+            
+            paper-tabs[noink][nobar] paper-tab.core-selected {
+              color: #ffff8d;
+            }
+            
+            paper-tabs.transparent-teal {
+              background-color: transparent;
+              color: #00bcd4;
+              box-shadow: none;
+            }
+            
+            paper-tabs.transparent-teal::shadow #selectionBar {
+              background-color: #00bcd4;
+            }
+            
+            paper-tabs.transparent-teal paper-tab::shadow #ink {
+              color: #00bcd4;
+            }
+            
+            h3 {
+              font-size: 16px;
+              font-weight: 400;
+            }
+            
+          </style>
     </head>
-    <body>
+    <body unresolved touch-action="auto">
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -61,7 +107,11 @@
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <!-- Polymer Code Snippet Element-->
         <link rel="import" href="/polymer/elements/code-snippet.html">
+        <!-- Polymer Paper Tabs -->
+        <link rel="import" href="/polymer/components/paper-tabs/paper-tabs.html">
+
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="/js/bootstrap.min.js"></script>
         <!-- Prism -->
