tabs work correctly (in Chrome)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,6 +113,7 @@
         <!-- Polymer Code Snippet Element-->
         <link rel="import" href="/polymer/elements/code-snippet.html">
         <link rel="import" href="/polymer/elements/tabs-panel.html">
+        <link rel="import" href="/polymer/elements/tab-code.html">
 
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="/js/bootstrap.min.js"></script>
