renamed "observables/" -> "documentation/"

--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -23,22 +23,22 @@ layout: default
 	<ul class="side-menu">
 		<li><a href="{{ site.url }}/documentation.html">Getting Started</a></li>
 		<li>
-		  <a href="{{ site.url }}/observables/observable.html">Observable</b></a>
+		  <a href="{{ site.url }}/documentation/observable.html">Observable</b></a>
 		  <ul>
-		    <li><a href="{{ site.url }}/observables/creating.html">Creating Observables</a></li>
-		    <li><a href="{{ site.url }}/observables/transforming.html">Transforming Observables</a></li>
-		    <li><a href="{{ site.url }}/observables/filtering.html">Filtering Observables</a></li>
-		    <li><a href="{{ site.url }}/observables/combining.html">Combining Observables</a></li>
-		    <li><a href="{{ site.url }}/observables/error-handling.html">Error Handling Operators</a></li>
-		    <li><a href="{{ site.url }}/observables/utilities.html">Observable Utility Operators</a></li>
-		    <li><a href="{{ site.url }}/observables/conditionals.html">Conditional and Boolean Operators</a></li>
-		    <li><a href="{{ site.url }}/observables/mathematical.html">Mathematical and Aggregate Operators</a></li>
-		    <li><a href="{{ site.url }}/observables/async.html">Async Operators</a></li>
-		    <li><a href="{{ site.url }}/observables/connectable.html">Connectable Observable Operators</a></li>
-		    <li><a href="{{ site.url }}/observables/blocking.html">Blocking Observable Operators</a></li>
-		    <li><a href="{{ site.url }}/observables/string.html">String Observables</a></li>
-		    <li><a href="{{ site.url }}/observables/alphabetical.html">Alphabetical List of Observable Operators</a></li>
-		    <li><a href="{{ site.url }}/observables/implement-operator.html">Implementing your own Operators</a></li>
+		    <li><a href="{{ site.url }}/documentation/creating.html">Creating Observables</a></li>
+		    <li><a href="{{ site.url }}/documentation/transforming.html">Transforming Observables</a></li>
+		    <li><a href="{{ site.url }}/documentation/filtering.html">Filtering Observables</a></li>
+		    <li><a href="{{ site.url }}/documentation/combining.html">Combining Observables</a></li>
+		    <li><a href="{{ site.url }}/documentation/error-handling.html">Error Handling Operators</a></li>
+		    <li><a href="{{ site.url }}/documentation/utilities.html">Observable Utility Operators</a></li>
+		    <li><a href="{{ site.url }}/documentation/conditionals.html">Conditional and Boolean Operators</a></li>
+		    <li><a href="{{ site.url }}/documentation/mathematical.html">Mathematical and Aggregate Operators</a></li>
+		    <li><a href="{{ site.url }}/documentation/async.html">Async Operators</a></li>
+		    <li><a href="{{ site.url }}/documentation/connectable.html">Connectable Observable Operators</a></li>
+		    <li><a href="{{ site.url }}/documentation/blocking.html">Blocking Observable Operators</a></li>
+		    <li><a href="{{ site.url }}/documentation/string.html">String Observables</a></li>
+		    <li><a href="{{ site.url }}/documentation/alphabetical.html">Alphabetical List of Observable Operators</a></li>
+		    <li><a href="{{ site.url }}/documentation/implement-operator.html">Implementing your own Operators</a></li>
 		  </ul>
 		</li>
 		<li><a href="{{ site.url }}/subject.html">Subject</a></li>
