prism highlighting for clojure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,6 +119,7 @@
         <script src="/js/bootstrap.min.js"></script>
         <!-- Prism -->
         <script src="/js/prism.js"></script>
+        <script src="/js/prism.clojure.js"></script>
         <!-- Google Closure -->
         <script src="/js/goog/base.js"></script>
         
