--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
             
           </style>
     </head>
-    <body unresolved touch-action="auto">
+    <body unresolved>
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
