--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,7 +106,7 @@
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="/js/jquery/1.11.0/jquery.min.js"></script>
         
         <!-- Polymer Paper Tabs -->
         <link rel="import" href="/polymer/components/paper-tabs/paper-tabs.html">
