--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
             
           </style>
     </head>
-    <body unresolved>
+    <body>
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -107,25 +107,6 @@
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="/js/jquery/1.11.0/jquery.min.js"></script>
-        
-        <!-- Polymer Paper Tabs -->
-        <link rel="import" href="/polymer/components/paper-tabs/paper-tabs.html">
-        <!-- Polymer Code Snippet Element-->
-        <link rel="import" href="/polymer/elements/code-snippet.html">
-        <link rel="import" href="/polymer/elements/tabs-panel.html">
-        <link rel="import" href="/polymer/elements/tab-code.html">
-
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="/js/bootstrap.min.js"></script>
-        <!-- Prism -->
-        <script src="/js/prism.js"></script>
-        <script src="/js/prism.clojure.js"></script>
-        <!-- Google Closure -->
-        <script src="/js/goog/base.js"></script>
-        
-        <script>
-            goog.require('goog.html.SafeHtml');
-        </script>
 
         <div class="container">
             <div>
@@ -145,6 +126,25 @@
 
         <!-- Activate current page menu button -->
         <script>$("#menu-{{ page.id }}").addClass("active");</script>
+
+        <!-- Polymer Paper Tabs -->
+        <link rel="import" href="/polymer/components/paper-tabs/paper-tabs.html">
+        <!-- Polymer Code Snippet Element-->
+        <link rel="import" href="/polymer/elements/code-snippet.html">
+        <link rel="import" href="/polymer/elements/tabs-panel.html">
+        <link rel="import" href="/polymer/elements/tab-code.html">
+
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="/js/bootstrap.min.js"></script>
+        <!-- Prism -->
+        <script src="/js/prism.js"></script>
+        <script src="/js/prism.clojure.js"></script>
+        <!-- Google Closure -->
+        <script src="/js/goog/base.js"></script>
+        
+        <script>
+            goog.require('goog.html.SafeHtml');
+        </script>
 
     </body>
 </html>
