dynamic "back to top" link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -124,6 +124,13 @@
             </div>
         </div><!-- /.container -->
 
+        <!-- back to top link -->
+        <span id="top-link-block" class="hidden">
+            <a href="#top" class="well well-sm" onclick="$('html,body').animate({scrollTop:0},'slow');return false;">
+                <i class="glyphicon glyphicon-chevron-up"></i>
+            </a>
+        </span>
+
         <!-- Activate current page menu button -->
         <script>$("#menu-{{ page.id }}").addClass("active");</script>
 
@@ -144,6 +151,15 @@
         
         <script>
             goog.require('goog.html.SafeHtml');
+        </script>
+
+        <script>
+            /* Dynamic "Back to top" link */
+            if ( ($(window).height() + 100) < $(document).height() ) {
+                $('#top-link-block').removeClass('hidden').affix({
+                    offset: {top:100}
+                });
+            }
         </script>
 
     </body>
