Make layout frontpage and limit line width

--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -16,7 +16,7 @@ layout: default
 </style>
 
 <div class="row">
-  <div class="col-sm-9">
+  <div class="col-sm-9 content-column">
   	{{ content }}
   </div>
   <div class="col-sm-3">
