--- a/styles/reactivex.less
+++ b/styles/reactivex.less
@@ -1,4 +1,3 @@
-
 // ----------------------
 // Stock Bootstrap stuff.
 // ----------------------
@@ -9,4 +8,11 @@
 // Custom stuff goes here.
 // -----------------------
 
-// @font-size-base: 9px; // Example. This can override bootstrap's variables.
+// @font-size-base: 16px; // Example. This can override bootstrap's variables.
+
+@media (min-width: @screen-lg-min) {
+  .content-column {
+    width: 46em;
+    margin: 0 auto;
+  }
+}
