--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" href="/css/syntax.css">
 
         <style shim-shadowdom>
+            /* This is overriding our styles for body, and this shouldn't.
             body {
               font-family: RobotoDraft, 'Helvetica Neue', Helvetica, Arial;
               color: #333;
@@ -36,6 +37,7 @@
               -webkit-tap-highlight-color: rgba(0,0,0,0);
               -webkit-touch-callout: none;
             }
+            */
             
             paper-tabs, core-toolbar {
               background-color: #00bcd4;
@@ -85,7 +87,7 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li id="menu-intro"><a href="/">Intro</a></li>
+                        <li id="menu-intro"><a href="{{ site.url }}/intro.html">Intro</a></li>
                         <li id="menu-documentation"><a href="{{ site.url }}/documentation.html">Documentation</a></li>
                         <li id="menu-languages"><a href="{{ site.url }}/languages.html">Languages</a></li>
                         <li id="menu-projects"><a href="{{ site.url }}/projects.html">Related Projects</a></li>
@@ -101,18 +103,16 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="/js/jquery/1.11.0/jquery.min.js"></script>
 
-        <div class="container">
-            {{ content }}
+        {{ content }}
 
-            <hr/>
-            <div style="text-align:center">
-                <span><a href="{{ site.url }}"><img src="{{ site.url }}/assets/Rx_Icon.png"/> ReactiveX</a></span> 
-                <strong style="padding-left:10px; padding-right:10px;">&middot;</strong>
-                <span><a href="https://github.com/ReactiveX"><img src="{{ site.url }}/assets/GitHub_Icon.png"/> github.com/ReactiveX</a></span> 
-                <strong style="padding-left:10px; padding-right:10px;">&middot;</strong> 
-                <span><a href="https://twitter.com/ReactiveX"><img src="{{ site.url }}/assets/Twitter.png"/> twitter.com/ReactiveX</a></span>
-            </div>
-        </div><!-- /.container -->
+        <hr/>
+        <div style="text-align:center">
+            <span><a href="{{ site.url }}"><img src="{{ site.url }}/assets/Rx_Icon.png"/> ReactiveX</a></span>
+            <strong style="padding-left:10px; padding-right:10px;">&middot;</strong>
+            <span><a href="https://github.com/ReactiveX"><img src="{{ site.url }}/assets/GitHub_Icon.png"/> github.com/ReactiveX</a></span>
+            <strong style="padding-left:10px; padding-right:10px;">&middot;</strong>
+            <span><a href="https://twitter.com/ReactiveX"><img src="{{ site.url }}/assets/Twitter.png"/> twitter.com/ReactiveX</a></span>
+        </div>
 
         <!-- back to top link -->
         <span id="top-link-block" class="hidden">
