Increase base font size

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         <link rel="stylesheet" href="/css/syntax.css">
 
         <style shim-shadowdom>
-            /* This is overriding our styles for body, and this shouldn't.
+            /* This is overriding our styles for body, and it shouldn't.
             body {
               font-family: RobotoDraft, 'Helvetica Neue', Helvetica, Arial;
               color: #333;
@@ -67,10 +67,12 @@
               color: #00bcd4;
             }
             
+            /* This is overriding our custom styles, and it shouldn't.
             h3 {
               font-size: 16px;
               font-weight: 400;
             }
+            */
           </style>
     </head>
     <body>
