Define ReactiveX color palette

--- a/styles/reactivex.less
+++ b/styles/reactivex.less
@@ -1,12 +1,12 @@
-// ----------------------
-// Stock Bootstrap stuff.
-// ----------------------
+// ---------------
+// Stock Bootstrap
+// ---------------
 
 @import "../bootstrap/less/bootstrap.less";
 
-// -----------------------
-// Custom stuff goes here.
-// -----------------------
+// ----------------------
+// Custom stuff goes here
+// ----------------------
 
 @import "variables.less";
 
@@ -31,15 +31,16 @@ body {
   font-family: @reactivex-font-special;
 }
 .navbar-inverse {
+  background-color: @gray-dark;
   .navbar-brand {
-    color: @reactivex-white;
+    color: @gray-lighter;
   }
 }
 
 .jumbotron {
   background: url("/assets/diagmonds.png");
   min-height: 400px;
-  color: @reactivex-white;
+  color: @gray-lighter;
   h1.title {
     font-family: @reactivex-font-special;
     img {
