--- a/styles/variables.less
+++ b/styles/variables.less
@@ -1,12 +1,41 @@
+// ------
+// COLORS
+// ------
+
+@reactivex-pink:  #EC0C8E;
+@reactivex-pinkle:#c2158c;
+@reactivex-purple:#592D89;
+@reactivex-blue:  #3c71c4;
+@reactivex-grass: #20993c;
+@reactivex-green: #26de5a;
+@reactivex-yellow:#ffcb47;
+@reactivex-red:   #de4c28;
+
+@brand-primary:         @reactivex-blue;
+@brand-success:         @reactivex-grass;
+@brand-info:            @reactivex-pinkle;
+@brand-warning:         @reactivex-yellow;
+@brand-danger:          @reactivex-red;
+
+@link-color: @reactivex-blue;
+@code-color: @reactivex-pinkle;
+
+@gray-base:              #000;
+@gray-darker:            lighten(@gray-base, 13.5%); // #222
+@gray-dark:              lighten(@gray-base, 20%);   // #333
+@gray:                   lighten(@gray-base, 33.5%); // #555
+@gray-light:             lighten(@gray-base, 46.7%); // #777
+@gray-lighter:           lighten(@gray-base, 93.5%); // #eee
+
+// ----------
+// Typography
+// ----------
 
 @import url(http://fonts.googleapis.com/css?family=Signika);
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);
-
-@reactivex-white: #efefef;
 
 @font-size-base: 16px;
 @readable-line-width: 50rem;
 
 @reactivex-font-special: "Signika", Helvetica, sans-serif;
 @reactivex-font-basic: "Source Sans Pro", Helvetica, sans-serif;
-
