Replace .content-column with Bootstrap's own col-sm-8

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -4,7 +4,8 @@ layout: default
 
 <div class="container-full">
   <div class="jumbotron">
-    <div class="content-column">
+  <div class="container">
+    <div class="col-md-8 col-md-offset-2">
       <h1 class="title"><img src="{{ site.url }}/assets/Rx_Logo_S.png" />{{ site.name }}</h1>
       <h2 class="value-proposition">A framework for asynchronous programming<br />with observable streams</h3>
     </div>
@@ -12,7 +13,7 @@ layout: default
 </div>
 
 <div class="container">
-  <div class="content-column">
+  <div class="col-md-8 col-md-offset-2">
     {{ content }}
   </div>
 </div>
