--- a/_layouts/simple.html
+++ b/_layouts/simple.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="container">
-	<div class="content-column">
+  <div class="col-md-8 col-md-offset-2">
 	  {{ content }}
 	</div>
 </div>
