Minor improvement to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,12 +108,12 @@
         {{ content }}
 
         <hr/>
-        <div style="text-align:center">
-            <span><a href="{{ site.url }}"><img src="{{ site.url }}/assets/Rx_Icon.png"/> ReactiveX</a></span>
-            <strong style="padding-left:10px; padding-right:10px;">&middot;</strong>
-            <span><a href="https://github.com/ReactiveX"><img src="{{ site.url }}/assets/GitHub_Icon.png"/> github.com/ReactiveX</a></span>
-            <strong style="padding-left:10px; padding-right:10px;">&middot;</strong>
-            <span><a href="https://twitter.com/ReactiveX"><img src="{{ site.url }}/assets/Twitter.png"/> twitter.com/ReactiveX</a></span>
+        <div class="footer">
+            <a href="{{ site.url }}"><img src="{{ site.url }}/assets/Rx_Icon.png"/>ReactiveX</a>
+            <span class="dot">&middot;</span>
+            <a href="https://github.com/ReactiveX"><img src="{{ site.url }}/assets/GitHub_Icon.png"/>github.com/ReactiveX</a>
+            <span class="dot">&middot;</span>
+            <a href="https://twitter.com/ReactiveX"><img src="{{ site.url }}/assets/Twitter.png"/>twitter.com/ReactiveX</a>
         </div>
 
         <!-- back to top link -->
@@ -140,7 +140,7 @@
         <script src="/js/prism.clojure.js"></script>
         <!-- Google Closure -->
         <script src="/js/goog/base.js"></script>
-        
+
         <script>
             goog.require('goog.html.SafeHtml');
         </script>
