--- a/styles/reactivex.less
+++ b/styles/reactivex.less
@@ -56,9 +56,16 @@ body {
   }
 }
 
-@media (min-width: @screen-lg-min) {
-  .content-column {
-    width: @readable-line-width;
-    margin: 0 auto;
+.footer {
+  text-align: center;
+  padding: 20px 0 40px;
+  a {
+    img {
+      width: 1.4rem;
+      margin-right: 0.4rem;
+    }
   }
+}
+span.dot {
+  margin: 0 10px;
 }
