--- a/styles/variables.less
+++ b/styles/variables.less
@@ -3,7 +3,7 @@
 // ------
 
 @reactivex-pink:  #EC0C8E;
-@reactivex-pinkle:#c2158c;
+@reactivex-pinkle:#b7178c;
 @reactivex-purple:#592D89;
 @reactivex-blue:  #3c71c4;
 @reactivex-grass: #20993c;
