Fixed top margin before documentation content

--- a/styles/reactivex.less
+++ b/styles/reactivex.less
@@ -56,6 +56,11 @@ body {
   }
 }
 
+.full-page-container {
+  .container;
+  margin-top: 1rem;
+}
+
 .footer {
   text-align: center;
   padding: 20px 0 40px;
