--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -15,7 +15,7 @@ layout: default
 }
 </style>
 
-<div class="container">
+<div class="full-page-container">
 	<div class="row">
 	  <div class="col-sm-8">
 	  	{{ content }}
